[tool.poetry]
name = "plantuml_class_generator"
version = "0.1.0"
description = ""
authors = ["Masahiro Ishii <marufeuille@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lark-parser = "^0.11.3"
flake8 = "^3.9.2"
black = "^21.5b1"
mypy = "^0.812"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
